--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
+
+  firebase_core: ^3.4.1
+  firebase_auth: ^5.3.0
+
+
+
   flutter:
     sdk: flutter
 
