--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   # Firebase
   firebase_core: ^3.4.1
   firebase_auth: ^5.3.0
+  cloud_firestore: ^5.0.0
 
 dev_dependencies:
   flutter_test:
