--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  curved_navigation_bar:
+    path: ./curved_navigation_bar
   # UI & Fonts
   google_fonts: ^6.2.1
   cupertino_icons: ^1.0.8
