--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   # UI & Fonts
   google_fonts: ^6.2.1
   cupertino_icons: ^1.0.8
+  # existing deps...
+  provider: ^6.1.2
+  shared_preferences: ^2.2.15
 
   # Firebase
   firebase_core: ^3.4.1
