--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   firebase_core: ^3.4.1
   firebase_auth: ^5.3.0
   cloud_firestore: ^5.0.0
+  firebase_storage: ^12.3.4
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
